--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,7 +22,7 @@
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left">
         <h1 style="text-align:center; padding-top: 40px;">Welcome to C64 Opcodes<br>Extension for VSCode</h1>
       </div>
-      <div class="HomeButtonBack"><br>
+      <div class="HomeButtonBack" style="float: left;"><br>
         <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonMAIN" onclick="cmdVIEWALL()">View All Opcodes List</button><br>
         <button style="margin-left: 15px;" title="View List of All Processor Flags" class="button buttonMAIN" onclick="cmdPFLAGS()">Processor Flags</button><br>
         <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonMAIN" onclick="cmdBITWISE()">Bitwise Instructions</button><br>
@@ -36,9 +36,10 @@
         <button style="margin-left: 15px;" title="View List of All Stack Instructions" class="button buttonMAIN" onclick="cmdSTACK()">Stack Instructions</button><br>
         <button style="margin-left: 15px;" title="View List of All Other Instructions" class="button buttonMAIN" onclick="cmdOTHER()">Other Instructions</button><br>
         <button style="margin-left: 15px;" title="View List of All Illegal Instructions" class="button buttonMAIN" onclick="cmdILLEGAL()">Illegal Instructions</button><br>
-      </div>
-      <div id="body">
-        <p>Test</p>
+        <button style="margin-left: 15px;" title="Open Test Page" class="button buttonMAIN" onclick="cmdTEST()">Open Test Page</button><br>
+        <div style="background-color: blueviolet; float: right;">
+          <p>Test</p>
+        </div>
       </div>
     </div>
     <footer id="footer">C64 Opcodes VSCode Extension, By WillASM</footer>
