--- a/src/html/jump.html
+++ b/src/html/jump.html
@@ -22,6 +22,9 @@
       <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
         <h1 style="text-align:center; padding-top: 40px;">Jump Instructions<br>Placeholder</h1>
       </div>
+      <div class="AllButtonBack"><br>
+        <button title="WIP" class="button buttonOPCODE" onclick="cmdHOME()">WIP</button>
+      </div>
       <h2 style="margin-left: 15px;">Navigation:</h2>
       <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
     </div>
