--- a/src/html/test.html
+++ b/src/html/test.html
@@ -17,44 +17,41 @@
 <body>
   <div id="page-container">
     <div id="content-wrap">
-      <div id="header">
-        <div id="header"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-          <h1 style="text-align:center; padding-top: 20px;">TEST HEADER TEXT</h1>
-        </div>
+      <div id="header"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1 style="text-align:center; padding-top: 20px;">TEST HEADER TEXT</h1>
       </div>
       <div id="sidebar">
         test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit
-        amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur
       </div>
       <div id="home-body">
-        <p>test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor
-          sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur
-          adipisicing elit. Sapiente, consequuntur distinctio facilis tempore quibusdam, officia deserunt facere eligendi dolore voluptatum alias illum consequatur est corporis necessitatibus maxime hic vero maiores? Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Eveniet exercitationem illum reiciendis harum repellat, fugiat eius iusto aspernatur recusandae necessitatibus qui, officiis at accusantium! Officiis maiores atque ea optio est! Lorem ipsum dolor, sit amet consectetur adipisicing
-          elit. Enim quis repudiandae repellendus nemo ea, nobis voluptates! Ex consequuntur, aperiam nobis sint porro doloribus quidem, quas libero commodi quis at ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus deleniti non laudantium
-          libero, officia at fugiat. Fugit provident sapiente doloribus at velit dignissimos eius omnis modi, repellendus distinctio soluta est. test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem
-          dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci
-          commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, consequuntur distinctio facilis tempore quibusdam, officia deserunt facere eligendi
-          dolore voluptatum alias illum consequatur est corporis necessitatibus maxime hic vero maiores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet exercitationem illum reiciendis harum repellat, fugiat eius iusto aspernatur recusandae
-          necessitatibus qui, officiis at accusantium! Officiis maiores atque ea optio est! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim quis repudiandae repellendus nemo ea, nobis voluptates! Ex consequuntur, aperiam nobis sint porro
-          doloribus quidem, quas libero commodi quis at ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus deleniti non laudantium libero, officia at fugiat. Fugit provident sapiente doloribus at velit dignissimos eius omnis modi,
-          repellendus distinctio soluta est. libero, officia at fugiat. Fugit provident sapiente doloribus at velit dignissimos eius omnis modi, repellendus distinctio soluta est. test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-          labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis
-          repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, consequuntur distinctio facilis tempore
-          quibusdam, officia deserunt facere eligendi dolore voluptatum alias illum consequatur est corporis necessitatibus maxime hic vero maiores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet exercitationem illum reiciendis harum
-          repellat, fugiat eius iusto aspernatur recusandae necessitatibus qui, officiis at accusantium! Officiis maiores atque ea optio est! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim quis repudiandae repellendus nemo ea, nobis voluptates!
-          Ex consequuntur, aperiam nobis sint porro doloribus quidem, quas libero commodi quis at ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus deleniti non laudantium libero, officia at fugiat. Fugit provident sapiente doloribus
-          at velit dignissimos eius omnis modi, repellendus distinctio soluta est. libero, officia at fugiat. Fugit provident sapiente doloribus at velit dignissimos eius omnis modi, repellendus distinctio soluta est. test Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam
-          reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente, consequuntur
-          distinctio facilis tempore quibusdam, officia deserunt facere eligendi dolore voluptatum alias illum consequatur est corporis necessitatibus maxime hic vero maiores? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet exercitationem
-          illum reiciendis harum repellat, fugiat eius iusto aspernatur recusandae necessitatibus qui, officiis at accusantium! Officiis maiores atque ea optio est! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim quis repudiandae repellendus
-          nemo ea, nobis voluptates! Ex consequuntur, aperiam nobis sint porro doloribus quidem, quas libero commodi quis at ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus deleniti non laudantium libero, officia at fugiat. Fugit
-          provident sapiente doloribus at velit dignissimos eius omnis modi, repellendus distinctio soluta est.</p>
+        amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur test
+        test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor
+        sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur
+        test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum
+        dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum dolor sit amet
+        consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem. Lorem, ipsum
+        dolor sit amet consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio,
+        nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit dolorem.
+        Lorem, ipsum dolor sit amet consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur
+        eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse harum sit
+        dolorem. Lorem, ipsum dolor sit amet consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus,
+        pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt esse
+        harum sit dolorem. Lorem, ipsum dolor sit amet consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae
+        ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt
+        esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae
+        ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt
+        esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae
+        ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt
+        esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae
+        ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam reprehenderit veritatis repellendus qui veniam? Incidunt iure adipisci commodi soluta quisquam amet? Numquam laborum fugit commodi incidunt
+        esse harum sit dolorem. Lorem, ipsum dolor sit amet consectetur
       </div>
       <!-- all other page content -->
+      <div>
+        <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
+      </div>
     </div>
-    <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
 </body>
 
